iOS/MacOS localized timezone names

--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -1,5 +1,7 @@
 name: flutter_timezone_example
 description: "Demonstrates how to use the flutter_timezone plugin."
+version: 0.0.1
+
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 
 environment:
