--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,10 +8,12 @@ environment:
   flutter: ">=3.22.0"
 
 dependencies:
+  equatable: ^2.0.7
   flutter:
     sdk: flutter
   flutter_web_plugins:
     sdk: flutter
+  meta: ^1.16.0
 
 dev_dependencies:
   flutter_test:
