--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: flutter_timezone
+name: flutter_native_timezone
 description: A flutter plugin for getting the local timezone of the device.
 version: 5.0.0
 homepage: https://github.com/tjarvstrand/flutter_timezone
